--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,33 +44,8 @@
 
   <!-- Main content -->
   <div class="content-container">
-
-    <div class="content-area">asdasd
-      
-      <div class="clr-row">
-        <div class="clr-col-lg-5 clr-col-md-8 clr-col-12">
-            <div class="card">
-                <div class="card-header">
-                    Header
-                </div>
-                <div class="card-block">
-                    <div class="card-title">
-                        Block
-                    </div>
-                    <div class="card-text">
-                        ...
-                    </div>
-                </div>
-                <div class="card-footer">
-                    <button class="btn btn-sm btn-link">Footer Action 1</button>
-                    <button class="btn btn-sm btn-link">Footer Action 2</button>
-                </div>
-            </div>
-        </div>
-    </div>
-      
-      
-      <!--router-outlet></router-outlet-->
+    <div class="content-area">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
