--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -1,13 +1,13 @@
-<pre>{{ tally | json }}</pre>
+<!--<app-tally *ngFor="let tally of tallies" [showAll]="showAll" [tally]="tally" (tallyIncrese)="increse(tally)"
+    (tallyDecrese)="decrese(tally)"></app-tally>-->
 
-<!--
-<div class="clr-row">
+<div class="clr-row" *ngFor="let tally of tallies">
     <div class="clr-col-12">
         <div class="card">
-            <div class="card-info" *ngIf="!editMode">
+            <div class="card-info">
                 <div class="card-header">
                     <div class="header-main-text">
-                        {{ tally.getName() }}
+                        <a routerLink="/tally/{{ tally.getUuid() }}" class="block">{{ tally.getName() }}</a>
                     </div>
                     <div class="pull-right header-meta-text">
                         <clr-dropdown [clrCloseMenuOnItemClick]="false">
@@ -33,7 +33,7 @@
                     <div class="card-text">
                         <div aria-hidden="true">
                             <div>Container 1 loading Progress </div>
-                            <progress class="progress-bar" max="100" [value]="percentage"
+                            <progress class="progress-bar" max="100" [value]="calculatePercentage(tally)"
                                 data-displayval="65%"></progress>
                         </div>
                     </div>
@@ -41,7 +41,7 @@
                 <div class="card-footer">
                     <div class="clr-row">
                         <div class="clr-col-4">
-                            <button class="btn btn-success-outline pull-left increse" (click)="increase()">Öka</button>
+                            <button class="btn btn-success-outline pull-left increse" (click)="increse(tally)">Öka</button>
                         </div>
                         <div class="clr-col-4 timeago"><small>
                                 <clr-icon shape="clock"></clr-icon> &nbsp; {{ tally.getLastTouched() | timeago }}
@@ -49,13 +49,13 @@
                         </div>
                         <div class="clr-col-4">
                             <button class="btn btn-danger-outline pull-right decrese"
-                                (click)="decrease()">Minska</button>
+                                (click)="decrese(tally)">Minska</button>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card-edit" *ngIf="editMode">
+            <!-- <div class="card-edit" *ngIf="editMode">
 
                 <div class="card-block">
                     <div class="clr-row">
@@ -139,10 +139,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </div>
 </div>
-
--->
-tally detail page
