--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -5,33 +5,36 @@
 
 <hr />
 
-<div class="clr-row">
-    <div class="clr-col-6">
-        <h4>Värde: {{ tally.getValue() }}</h4>
+<div class="clr-container">
+    <div class="clr-row first">
+        <div class="clr-col-6">
+            <h4>Värde: {{ tally.getValue() }}</h4>
+        </div>
+        <div class="clr-col-6">
+            <h4>Mål: {{ tally.getGoal() }}</h4>
+        </div>
     </div>
-    <div class="clr-col-6">
-        <h4>Nollställs: {{ tally.getResetEveryday() === true ? 'Ja' : 'Nej' }}</h4>
-    </div>
-</div>
 
 
-<div class="clr-row">
-    <div class="clr-col-6">
-        <h4>Ökas med: {{ tally.getIncreseBy() }}</h4>
+    <div class="clr-row first">
+        <div class="clr-col-6">
+            <h4>Öka: {{ tally.getIncreseBy() }}</h4>
+        </div>
+        <div class="clr-col-6">
+            <h4>Minska: {{ tally.getDecreseBy() }}</h4>
+        </div>
     </div>
-    <div class="clr-col-6">
-        <h4>Minskas med: {{ tally.getDecreseBy() }}</h4>
-    </div>
-</div>
 
 
-<div class="clr-row">
-    <div class="clr-col-6">
-        <h4>Mål: {{ tally.getGoal() }}</h4>
+    <div class="clr-row first">
+        <div class="clr-col-6">
+            <h4>Nollställs: {{ tally.getResetEveryday() === true ? 'Ja' : 'Nej' }}</h4>
+        </div>
+        <div class="clr-col-6">
+            <h4>Topscore: {{ tally.getTopScore() }}</h4>
+        </div>
     </div>
-    <div class="clr-col-6">
-        <h4>All Time High: {{ tally.getTopScore() }}</h4>
-    </div>
+
 </div>
 
 
@@ -44,14 +47,15 @@
             <clr-dg-column [clrDgField]="'value'">Värde</clr-dg-column>
             <clr-dg-column [clrDgField]="'color'">Mål uppnått</clr-dg-column>
 
-        
+
             <clr-dg-row *clrDgItems="let history of tally.getHistory()">
                 <clr-dg-cell>{{ history.date | date: 'yyyy-MM-dd'}}</clr-dg-cell>
                 <clr-dg-cell>{{ history.value }}</clr-dg-cell>
-                <clr-dg-cell>{{ history.value >= tally.getGoal() ? 'Ja' : 'Nej'  }}</clr-dg-cell>
+                <clr-dg-cell>{{ history.value >= tally.getGoal() ? 'Ja' : 'Nej' }}</clr-dg-cell>
             </clr-dg-row>
-        
-            <clr-dg-footer><span class="pull-left">{{ tally.getHistory().length }} dagars historik</span></clr-dg-footer>
+
+            <clr-dg-footer><span class="pull-left">{{ tally.getHistory().length }} dagars historik</span>
+            </clr-dg-footer>
         </clr-datagrid>
     </div>
 </div>
