--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -41,7 +41,7 @@
                 <div class="card-footer">
                     <div class="clr-row">
                         <div class="clr-col-4">
-                            <button class="btn btn-success-outline pull-left increse" (click)="increse(tally)">Öka</button>
+                            <button class="btn btn-success-outline pull-left increase" (click)="increase(tally)">Öka</button>
                         </div>
                         <div class="clr-col-4 timeago"><small>
                                 <clr-icon shape="clock"></clr-icon> &nbsp; {{ tally.getLastTouched() | timeago }}
