--- a/src/app/tally/tally.component.scss
+++ b/src/app/tally/tally.component.scss
@@ -10,7 +10,17 @@
             border-radius: 3px;
             border: 1px solid #e6e6e6;
         }
+
+        button.increase {
+            &:hover,
+            &:active, 
+            &:focus {
+                outline: 1px solid rgb(60, 133, 0);
+                outline-color: rgb(60, 133, 0);
+            } 
+        }
     }
+
 
     h4 {
         margin-top: 0;
