--- a/src/app/tally/tally.component.scss
+++ b/src/app/tally/tally.component.scss
@@ -1,3 +1,8 @@
+@import './../../assets/styles/variables';
+
+h1 {
+    margin-top: 5px;
+}
 .clr-row.tally-meta {
     margin-bottom: 20px;
     .clr-col-6 {
@@ -10,15 +15,6 @@
             border-radius: 3px;
             border: 1px solid #e6e6e6;
         }
-
-        button.increase {
-            &:hover,
-            &:active, 
-            &:focus {
-                outline: 1px solid rgb(60, 133, 0);
-                outline-color: rgb(60, 133, 0);
-            } 
-        }
     }
 
 
@@ -29,4 +25,12 @@
 
 h3.modal-title::first-letter {
     text-transform: capitalize;
+}
+
+.warning {
+    color: $dangerColor;
+}
+
+.success {
+    color: $successColor;
 }
