--- a/src/app/tally/tally.component.html
+++ b/src/app/tally/tally.component.html
@@ -1,5 +1,5 @@
 <h1>{{ tally.getName() }}</h1>
-<div class="lastTouched">
+<div>
     <small>{{ tally.getLastTouched() | timeago }}</small>
 </div>
 
