--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -1,6 +1,3 @@
-<!--<app-tally *ngFor="let tally of tallies" [showAll]="showAll" [tally]="tally" (tallyIncrese)="increse(tally)"
-    (tallyDecrese)="decrese(tally)"></app-tally>-->
-
 <div class="clr-row" *ngFor="let tally of tallies">
     <div class="clr-col-12">
         <div class="card">
@@ -141,5 +138,21 @@
                 </div>
             </div>-->
         </div>
+    </div>
+</div>
+
+<div class="clr-row">
+    <div class="clr-col-12">
+
+    </div>
+</div>
+
+<div class="clr-row" *ngIf="!tallies.length">
+    <div class="clr-col-12">
+        <h1>Clear Results</h1> 
+        <small>Det verkar inte som du har några räknare</small> 
+        <hr />
+        <a routerLink="/add" class="btn btn-success-outline block">Lägg till en räknare</a>
+        <a routerLink="/example" class="btn btn-success-outline block">Lägg till exempel</a>
     </div>
 </div>
