--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
   <!-- Header -->
   <header class="header-6">
     <div class="branding">
-        <a href="..." class="nav-link">
+        <a routerLink="/" class="nav-link">
             <span class="title">Clear Results</span>
         </a>
     </div>
