--- a/src/app/tally-list/tally-list.component.scss
+++ b/src/app/tally-list/tally-list.component.scss
@@ -25,6 +25,9 @@
 }
 
 .card-block {
+    .progress-status-text {
+        margin-bottom: 20px;
+    }
     .progress-bar {
         width: 100%;
     }
