--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -28,10 +28,13 @@
                         Block
                     </div>
                     <div class="card-text">
-                        <div aria-hidden="true">
-                            <div>Container 1 loading Progress </div>
-                            <progress class="progress-bar" max="100" [value]="calculatePercentage(tally)"
-                                data-displayval="65%"></progress>
+                        <div aria-hidden="true" class="clr-row progress-status-text">
+                            <div class="clr-col-6">Avklarat: {{ calculatePercentage(tally) }}% </div>
+                            <div class="clr-col-6"><span class="pull-right"> {{ tally.getValue() }} av {{ tally.getGoal() }} </span> </div>
+                        </div>
+                        <!--<progress class="progress-bar" max="100" [value]="calculatePercentage(tally)" data-displayval="65%"></progress-->
+                        <div class="progress-static success">
+                            <div class="progress-meter" [attr.data-value]="calculatePercentage(tally)"></div>
                         </div>
                     </div>
                 </div>
