--- a/src/app/tally-list/tally-list.component.scss
+++ b/src/app/tally-list/tally-list.component.scss
@@ -2,8 +2,12 @@
 
 .clr-row.inactive{
     opacity: 0.5;
-    
 }
+
+.clr-row.hideInactive{
+    display: none;
+}
+
 .card-header {
     > div {
         display: inline;
