--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,8 @@ span.status-badge {
     text-align: center;
     width: 100%;
 }
+
+a, a:visited, a:hover, a:active {
+    color: #00364d;
+    text-decoration: none;
+}
