--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -1,1 +1,3 @@
-<p>add-edit-tally works!</p>
+<p>{{ editMode ? 'Redigeringsläge' : 'Lägga till ny räknarläge'}}</p>
+
+<pre>{{ tally | json }}</pre>
