--- a/src/app/add-edit-tally/add-edit-tally.component.scss
+++ b/src/app/add-edit-tally/add-edit-tally.component.scss
@@ -1,12 +1,19 @@
-form {
-    .resetEveryDay div {
-        width: 100%;
+.card {
+
+    form.clr-row {
+        margin-bottom: 0;
+        .radio.btn {
+            width: 100%;
+        }
     }
+    .clr-row{
+        margin-bottom: 20px;
+    }
+    
+    .card-footer {
+        padding-left: 1.2rem;
+        padding-right: 1.2rem;
+    }   
 }
-.clr-row{
-    margin-bottom: 20px;
-}
-
-
 
 
