--- a/src/app/add-edit-tally/add-edit-tally.component.scss
+++ b/src/app/add-edit-tally/add-edit-tally.component.scss
@@ -1,19 +1,28 @@
 .card {
-
     form.clr-row {
         margin-bottom: 0;
+        padding-top: 0;
         .radio.btn {
             width: 100%;
         }
+
+        .resetEveryDay {
+            margin: 1rem 0;
+            span {
+                font-size: 0.65rem;
+                line-height: 0.9rem;
+                font-weight: 600;
+                padding-bottom: 8px;
+                display: block;
+            }
+        }
     }
-    .clr-row{
+    .clr-row {
         margin-bottom: 20px;
     }
-    
+
     .card-footer {
         padding-left: 1.2rem;
         padding-right: 1.2rem;
-    }   
+    }
 }
-
-
