--- a/src/app/add-edit-tally/add-edit-tally.component.scss
+++ b/src/app/add-edit-tally/add-edit-tally.component.scss
@@ -6,6 +6,11 @@
             width: 100%;
         }
 
+        input[type="phone"],
+        input[type="text"]{
+            width: 100%;
+        }
+
         .resetEveryDay {
             margin: 1rem 0;
             span {
