--- a/src/app/tally-list/tally-list.component.html
+++ b/src/app/tally-list/tally-list.component.html
@@ -13,7 +13,7 @@
                 </div>
                 <div class="card-block">
                     <div class="card-title">
-                        Block
+                        Dynamiskt mål: 
                     </div>
                     <div class="card-text">
                         <div aria-hidden="true" class="clr-row progress-status-text">
