--- a/src/app/add-edit-tally/add-edit-tally.component.html
+++ b/src/app/add-edit-tally/add-edit-tally.component.html
@@ -12,50 +12,50 @@
                 <div class="clr-col-12">
                     <clr-input-container>
                         <label for="name">Titel</label>
-                        <input clrInput type="text" style="width: 100%;" [(ngModel)]="tally.name" name="name" id="name"
+                        <input clrInput type="text" [(ngModel)]="tally.name" name="name" id="name"
                             required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
                 <div class="clr-col-6">
                     <clr-input-container>
                         <label for="increaseBy">Öka</label>
-                        <input clrInput type="phone" placeholder="10" style="width: 100%;" [(ngModel)]="tally.increseBy"
+                        <input clrInput type="number" placeholder="10" [(ngModel)]="tally.increseBy"
                             name="increseBy" id="increseBy" required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
                 <div class="clr-col-6">
                     <clr-input-container>
                         <label for="decreseBy">Minska</label>
-                        <input clrInput type="phone" placeholder="10" style="width: 100%;" [(ngModel)]="tally.decreseBy"
+                        <input clrInput type="number" placeholder="10" [(ngModel)]="tally.decreseBy"
                             name="decreseBy" required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
                 <div class="clr-col-6">
                     <clr-input-container>
                         <label for="value">Värde</label>
-                        <input clrInput type="phone" placeholder="0" style="width: 100%;" [(ngModel)]="tally.value"
+                        <input clrInput type="number" placeholder="0" [(ngModel)]="tally.value"
                             name="value" required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
                 <div class="clr-col-6">
                     <clr-input-container>
                         <label for="goal">Mål</label>
-                        <input clrInput type="phone" placeholder="100" style="width: 100%;" [(ngModel)]="tally.goal"
+                        <input clrInput type="number" placeholder="100" [(ngModel)]="tally.goal"
                             name="goal" required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
 
                 <div class="clr-col-6">
                     <clr-input-container>
                         <label for="topScore">Högsta värdet</label>
-                        <input clrInput type="phone" placeholder="100" style="width: 100%;" [(ngModel)]="tally.topScore"
+                        <input clrInput type="number" placeholder="100" [(ngModel)]="tally.topScore"
                             name="topScore" required />
-                        <clr-control-error>We need your first name for legal compliance</clr-control-error>
+                        <clr-control-error>Här måste det finnas ett värde</clr-control-error>
                     </clr-input-container>
                 </div>
                 <div class="clr-col-6"></div>
@@ -64,14 +64,14 @@
                 <div class="clr-col-6 resetEveryDay">
                     <span>Nollställ varje dag</span>
                     <div class="radio btn">
-                        <input type="radio" name="btn-group-demo-radios" id="btn-demo-radio-1">
+                        <input type="radio" [checked]="tally.getResetEveryday()" name="btn-group-demo-radios" (click)="resetEveryDay(true)" id="btn-demo-radio-1">
                         <label for="btn-demo-radio-1">Ja</label>
                     </div>
                 </div>
                 <div class="clr-col-6 resetEveryDay">
                     <span>&nbsp;</span>
                     <div class="radio btn">
-                        <input type="radio" name="btn-group-demo-radios" id="btn-demo-radio-4">
+                        <input type="radio" [checked]="!tally.getResetEveryday()" name="btn-group-demo-radios" (click)="resetEveryDay(false)" id="btn-demo-radio-4">
                         <label for="btn-demo-radio-4">Nej</label>
                     </div>
                 </div>
@@ -83,8 +83,6 @@
                     <span class="danger status-badge block" *ngIf="!tally.getActive()"
                         (click)="toggleActive()">Inaktiv</span>
                 </div>
-
-
             </form>
         </div>
     </div>
@@ -94,10 +92,8 @@
                 <a routerLink="/tally/{{ tally.getUuid() }}" class="btn btn-danger-outline block">Ångra</a>
             </div>
             <div class="clr-col-6">
-                <button class="btn btn-success-outline block">{{ editMode ? 'Uppdatera' : 'Spara' }}</button>
+                <button class="btn btn-success-outline block" (click)="save()">{{ editMode ? 'Uppdatera' : 'Spara' }}</button>
             </div>
         </div>
     </div>
-
-
 </div>
